# whiteboards

./: .gitignore  stack.yaml  whiteboards.cabal
app/: Main.hs
elm/: Main.elm  Messages.elm  Models.elm  Routes.elm  Update.elm  View.elm
elm/Users/: Commands.elm  List.elm  Messages.elm  Models.elm  Update.elm  View.elm
src/: Api.hs  App.hs
static/: index.html
util/: GenElm.hs
